# DevOps-Demo-Project

./: PROJECT_SUMMARY.md  README.md  kubectl.sha256  pyproject.toml
.githooks/: pre-push
.github/: COPILOT_README.md  COPILOT_SUMMARY.md  COPILOT_VISUAL_GUIDE.md  copilot-chat-modes.md  copilot-instructions.md  copilot-prompts.md  copilot-quick-ref.md
.github/workflows/: cd.yml  ci.yml  gitflow.yml  release.yml
argocd/: application.yaml
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT.md
helm/devops-demo/: values.yaml
helm/devops-demo/templates/: deployment.yaml
scripts/: common.sh  init.sh  install-argocd.sh  install-docker.sh  install-kubectl.sh
scripts/tools/: _install-zellij.sh  install-k9s.sh
